# hash-wasm-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build_and_merge.sh  hash-worker.js  index.html  update_package_json.js
.github/workflows/: webassembly.yml
pkg/: .gitignore  rollup.config.ts  tsconfig.json
pkg/src/: iife.ts  index.ts  node.ts
pkg/src/browser/: index.ts
pkg/src/node/: index.ts
src/: lib.rs
src/hash/: blake3.rs  file_render.rs  hash_result.rs  hash_type.rs  hash_worker.rs  hasher_wrapper.rs  md5.rs  mod.rs  sha256.rs  sha2_256.rs  sha3_256.rs  sha3_512.rs  sha512.rs  sha_256.rs  sha_512.rs
